# sihl-minimal-starter

./: Makefile  README.md  app.ml  app.opam  dune  dune-project  service.ml
.github/workflows/: ci.yml
